@@ -492,7 +492,6 @@ try:
             nameList = []
             posList = []
             sourceID = 0
-            lastSourceName = None
             for dataSet in self.data:
                 if dataSet.pol == self.stokes[0]:
                     utc = astro.taimjd_to_utcjd(dataSet.obsTime)
@@ -509,7 +508,7 @@ try:
                     except AttributeError:
                         currSourceName = dataSet.source
                     
-                    if currSourceName != lastSourceName:
+                    if currSourceName not in nameList:
                         sourceID += 1
                         
                         if dataSet.source == 'z':
@@ -534,9 +533,6 @@ try:
                         
                         # name
                         nameList.append(name)
-                        
-                        # Update
-                        lastSourceName = name
                         
             nSource = len(nameList)
             
