@@ -675,7 +675,6 @@ class Uv(WriterBase):
         raPoList = []
         decPoList = []
         sourceID = 0
-        lastSourceName = None
         for dataSet in self.data:
             if dataSet.pol == self.stokes[0]:
                 utc = astro.taimjd_to_utcjd(dataSet.obsTime)
@@ -692,7 +691,7 @@ class Uv(WriterBase):
                 except AttributeError:
                     currSourceName = dataSet.source
                 
-                if currSourceName != lastSourceName:
+                if currSourceName not in nameList:
                     sourceID += 1
                     
                     if dataSet.source == 'z':
@@ -722,9 +721,6 @@ class Uv(WriterBase):
                     
                     # name
                     nameList.append(name)
-                    
-                    # Update
-                    lastSourceName = name
                     
         nSource = len(nameList)
         
